tests/ui/inference/issue-80409.compat.stderr
error[E0277]: the trait bound `usize: Fsm` is not satisfied
  --> $DIR/issue-80409.rs:36:31
   |
LL |     builder.state().on_entry(|_| {});
   |                               ^ the trait `Fsm` is not implemented for `usize`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-80409.rs:26:1
   |
LL | trait Fsm {
   | ^^^^^^^^^
note: required by a bound in `StateContext`
  --> $DIR/issue-80409.rs:30:31
   |
LL | struct StateContext<'a, TFsm: Fsm> {
   |                               ^^^ required by this bound in `StateContext`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
